Remove the OS X build on Travis CI
For one reason or another, Travis CI does not support python on
OS X. Hopefully this will change soon!

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 
 os:
   - linux
-  - osx
+
+  # Travis-CI does not support python on OSX for some reason
+  # - osx
 
 python:
   - "2.7"
