--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,9 @@ environment:
     - PYTHON: "C:\\Python34-x64"
     - PYTHON: "C:\\Python35-x64"
 
+install:
+  - cmd: "%PYTHON%\\python.exe -m pip install -r requirements.txt"
+
 build: off
 
 test_script:
