--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,9 @@ python:
   - "3.4"
   - "3.5"
 
+install:
+  - pip install codecov
+
 script:
-  - nosetests
+  - nosetests --with-coverage
+  - codecov
