--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 0.0.0.{build}
+version: 0.1.0.{build}
 
 environment:
   matrix:
@@ -7,7 +7,7 @@ environment:
     - PYTHON: "C:\\Python35-x64"
 
 install:
-  - cmd: "%PYTHON%\\python.exe -m pip install"
+  - cmd: "%PYTHON%\\python.exe -m pip install ."
 
 build: off
 
