--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,13 +3,15 @@ version: 0.1.0.{build}
 environment:
   matrix:
     - PYTHON: "C:\\Python27-x64"
-    - PYTHON: "C:\\Python34-x64"
     - PYTHON: "C:\\Python35-x64"
+    - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
 
 install:
+  - cmd: "%PYTHON%\\python.exe -m pip install lxml nose"
   - cmd: "%PYTHON%\\python.exe -m pip install ."
 
 build: off
 
 test_script:
-  - "%PYTHON%\\python.exe setup.py test"
+  - "%PYTHON%\\Scripts\\nosetests -coverage"
